highlighted answers in smaller projects

--- a/dog-project/dog_app.ipynb
+++ b/dog-project/dog_app.ipynb
@@ -232,9 +232,15 @@
     "- What percentage of the first 100 images in `human_files` have a detected human face?  \n",
     "- What percentage of the first 100 images in `dog_files` have a detected human face? \n",
     "\n",
-    "Ideally, we would like 100% of human images with a detected face and 0% of dog images with a detected face.  You will see that our algorithm falls short of this goal, but still gives acceptable performance.  We extract the file paths for the first 100 images from each of the datasets and store them in the numpy arrays `human_files_short` and `dog_files_short`.\n",
-    "\n",
-    "__Answer:__ "
+    "Ideally, we would like 100% of human images with a detected face and 0% of dog images with a detected face.  You will see that our algorithm falls short of this goal, but still gives acceptable performance.  We extract the file paths for the first 100 images from each of the datasets and store them in the numpy arrays `human_files_short` and `dog_files_short`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>ANSWER:</b></div>"
    ]
   },
   {
@@ -273,9 +279,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Question 2:__ This algorithmic choice necessitates that we communicate to the user that we accept human images only when they provide a clear view of a face (otherwise, we risk having unneccessarily frustrated users!). In your opinion, is this a reasonable expectation to pose on the user? If not, can you think of a way to detect humans in images that does not necessitate an image with a clearly presented face?\n",
-    "\n",
-    "**ANSWER: For a novel or unstable algorithm, or one that has very limited application, this is an acceptable limitation.  However, as most pictures are not taken with the specific aim to use them in such an algorithm, and for widescale use, it would be necessary for an algorithm to be able to cope with images that are less clear, may have partially blocked faces, and so forth.  If an image does not have a clearly presented face, it may be possible to do a partial feature match given the usual configuration of features on human faces - distance between eyes, nose, mouth, and so forth.  I'm not certain whether this can be accomplished by current algorithms, but in principle it should be possible, likely necessitating training with a large number of partially obscured human faces.**"
+    "__Question 2:__ This algorithmic choice necessitates that we communicate to the user that we accept human images only when they provide a clear view of a face (otherwise, we risk having unneccessarily frustrated users!). In your opinion, is this a reasonable expectation to pose on the user? If not, can you think of a way to detect humans in images that does not necessitate an image with a clearly presented face?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>ANSWER: For a novel or unstable algorithm, or one that has very limited application, this is an acceptable limitation.  However, as most pictures are not taken with the specific aim to use them in such an algorithm, and for widescale use, it would be necessary for an algorithm to be able to cope with images that are less clear, may have partially blocked faces, and so forth.  If an image does not have a clearly presented face, it may be possible to do a partial feature match given the usual configuration of features on human faces - distance between eyes, nose, mouth, and so forth.  I'm not certain whether this can be accomplished by current algorithms, but in principle it should be possible, likely necessitating training with a large number of partially obscured human faces.</b></div>"
    ]
   },
   {
@@ -410,9 +422,15 @@
     "\n",
     "__Question 3:__ Use the code cell below to test the performance of your `dog_detector` function.  \n",
     "- What percentage of the images in `human_files_short` have a detected dog?  \n",
-    "- What percentage of the images in `dog_files_short` have a detected dog?\n",
-    "\n",
-    "__Answer:__ "
+    "- What percentage of the images in `dog_files_short` have a detected dog?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>ANSWER:</b></div>"
    ]
   },
   {
@@ -523,30 +541,31 @@
     "\n",
     "![Sample CNN](images/sample_cnn.png)\n",
     "           \n",
-    "__Question 4:__ Outline the steps you took to get to your final CNN architecture and your reasoning at each step.  If you chose to use the hinted architecture above, describe why you think that CNN architecture should work well for the image classification task.\n",
-    "\n",
-    "**ANSWER: I started with the suggested architecture, and modified it to incorporate some of the suggestions in the resource below [1] regarding filter sizes, on the reasoning that the images and features are rather small.  The network structure otherwise seems fairly conventional for an image recognition network, which frequently have 32-64-128 or 32-32-64-64 (or similar) channel structures.  I err towards a greater number of channels, given the large number of features that must be learned for image recognition (especially something as fine-grained as determining breed).**\n",
-    "\n",
-    "**The first layer takes in the images, and the following Max Pooling layer reduces the parameter space by down-sampling the image and reducing its dimensionality.  Additional layers create a deeper CNN, which creates higher abstractions of the data.  Global Average Pooling is used at the end, instead of Flattening, which minimizes overfitting by reducing the number of parameters in the model [2], whereas Flatten results in a larger Dense layer afterwards, and may lead to worse overfitting.  The size of the final Dense layer is equal to the number of possible dog breeds; i.e., 133.**\n",
-    "\n",
-    "**The accuracy of this starting CNN was fair: 12.3206%.  At this point I decided to try improving it by adding VGG-like doubled convoluted layers, as suggested in [1], which resulted in a modest improvement: 13.3971%.  I then added another large Dense layer prior to the final output layer, which resulted in a large improvement: 20.4545%.  At this point the model appeared to be overfitting, and I added batch normalization after the last convoluted layer, and the Dense layer, which again resulted in an improvement: 21.8900%.  There still appeared to be overfitting, so I added 2% Dropout layers after the Batch Normalization layers, which again resulted in a small improvement: 22.9665%.  Increasing the last Dropout layer to 3% resulted in another small improvement, at which point the model no longer seemed to be overfitting: 23.9234%.  Several other unsuccessful attempts at improving the model are detailed below.**\n",
-    "\n",
-    "References:\n",
-    "\n",
-    "[1] https://towardsdatascience.com/a-guide-to-an-efficient-way-to-build-neural-network-architectures-part-ii-hyper-parameter-42efca01e5d7\n",
-    "\n",
-    "[2] https://alexisbcook.github.io/2017/global-average-pooling-layers-for-object-localization/\n",
-    "\n",
-    "[3] https://github.com/keras-team/keras/issues/8470"
+    "__Question 4:__ Outline the steps you took to get to your final CNN architecture and your reasoning at each step.  If you chose to use the hinted architecture above, describe why you think that CNN architecture should work well for the image classification task."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Starting CNN (based on suggested CNN and suggestions in resource [1] above):**\n",
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>ANSWER: I started with the suggested architecture, and modified it to incorporate some of the suggestions in the resource below [1] regarding filter sizes, on the reasoning that the images and features are rather small.  The network structure otherwise seems fairly conventional for an image recognition network, which frequently have 32-64-128 or 32-32-64-64 (or similar) channel structures.  I err towards a greater number of channels, given the large number of features that must be learned for image recognition (especially something as fine-grained as determining breed).</b><br><br>\n",
     "\n",
-    "```\n",
+    "<b>The first layer takes in the images, and the following Max Pooling layer reduces the parameter space by down-sampling the image and reducing its dimensionality.  Additional layers create a deeper CNN, which creates higher abstractions of the data.  Global Average Pooling is used at the end, instead of Flattening, which minimizes overfitting by reducing the number of parameters in the model [2], whereas Flatten results in a larger Dense layer afterwards, and may lead to worse overfitting.  The size of the final Dense layer is equal to the number of possible dog breeds; i.e., 133.</b><br><br>\n",
+    "\n",
+    "<b>The accuracy of this starting CNN was fair: 12.3206%.  At this point I decided to try improving it by adding VGG-like doubled convoluted layers, as suggested in [1], which resulted in a modest improvement: 13.3971%.  I then added another large Dense layer prior to the final output layer, which resulted in a large improvement: 20.4545%.  At this point the model appeared to be overfitting, and I added batch normalization after the last convoluted layer, and the Dense layer, which again resulted in an improvement: 21.8900%.  There still appeared to be overfitting, so I added 2% Dropout layers after the Batch Normalization layers, which again resulted in a small improvement: 22.9665%.  Increasing the last Dropout layer to 3% resulted in another small improvement, at which point the model no longer seemed to be overfitting: 23.9234%.  Several other unsuccessful attempts at improving the model are detailed below.</b><br><br>\n",
+    "\n",
+    "References:<br><br>\n",
+    "\n",
+    "[1] https://towardsdatascience.com/a-guide-to-an-efficient-way-to-build-neural-network-architectures-part-ii-hyper-parameter-42efca01e5d7<br><br>\n",
+    "\n",
+    "[2] https://alexisbcook.github.io/2017/global-average-pooling-layers-for-object-localization/<br><br>\n",
+    "\n",
+    "[3] https://github.com/keras-team/keras/issues/8470<br><br>\n",
+    "\n",
+    "<b>Starting CNN (based on suggested CNN and suggestions in resource [1] above):</b>\n",
+    "\n",
+    "<code>\n",
     "model.add(Conv2D(filters=16, kernel_size=(3, 3), activation='relu', input_shape=(224, 224, 3)))\n",
     "model.add(MaxPooling2D(pool_size=(3, 3)))\n",
     "model.add(Conv2D(filters=32, kernel_size=(3, 3), activation='relu'))\n",
@@ -555,23 +574,22 @@
     "model.add(MaxPooling2D(pool_size=(3, 3)))\n",
     "model.add(GlobalAveragePooling2D())\n",
     "model.add(Dense(133, activation='softmax'))\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Starting CNN test accuracy: 12.3206%\n",
-    "* Added VGG-like double convoluted layers: 13.3971%\n",
-    "* Added another Dense layer (width: 512) prior to output layer: 20.4545%\n",
-    "* Try filter size (2,2) in MaxPooling layer: 14.7129% (abandon this)\n",
-    "* Model seems to be overfitting (training accuracy greater than test); add batch normalization after last convoluted layer and Dense layer: 21.8900%\n",
-    "* Still overfitting; add Dropout after batch normalization: 22.9665%\n",
-    "* Add Dropout after preceding layer: 19.4976% (didn't help; not trying this)\n",
-    "* Increase % of last Dropout layer to 3: **23.9234%** (lower on re-runs)\n",
-    "* Increase % of last Dropout layer to 4: 18.1818% (abandon)\n",
-    "* Increase % of other Dropout layer to 3: 18.8995% (abandon)"
+    "</code><br>\n",
+    "\n",
+    "<ul>\n",
+    "<li> Starting CNN test accuracy: 12.3206%</li>\n",
+    "<li> Added VGG-like double convoluted layers: 13.3971%</li>\n",
+    "<li> Added another Dense layer (width: 512) prior to output layer: 20.4545%</li>\n",
+    "<li> Try filter size (2,2) in MaxPooling layer: 14.7129% (abandon this)</li>\n",
+    "<li> Model seems to be overfitting (training accuracy greater than test); add batch normalization after last convoluted layer and Dense layer: 21.8900%</li>\n",
+    "<li> Still overfitting; add Dropout after batch normalization: 22.9665%</li>\n",
+    "<li> Add Dropout after preceding layer: 19.4976% (didn't help; not trying this)</li>\n",
+    "<li> Increase % of last Dropout layer to 3: <b>23.9234%</b> (lower on re-runs)</li>\n",
+    "<li> Increase % of last Dropout layer to 4: 18.1818% (abandon)</li>\n",
+    "<li> Increase % of other Dropout layer to 3: 18.8995% (abandon)</li>\n",
+    "</ul>\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -1148,11 +1166,17 @@
     "    \n",
     "        <your model's name>.summary()\n",
     "   \n",
-    "__Question 5:__ Outline the steps you took to get to your final CNN architecture and your reasoning at each step.  Describe why you think the architecture is suitable for the current problem.\n",
+    "__Question 5:__ Outline the steps you took to get to your final CNN architecture and your reasoning at each step.  Describe why you think the architecture is suitable for the current problem."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>ANSWER: To prevent overfitting, I aim to reduce the number of parameters (layers and layer sizes) in my model [1]. A very small initial model feeds the output of Resnet50 into the first layer, which being a Global Average Pooling layer, greatly reduces dimensionality and helps prevent overfitting.  The following layer is a Dense layer which classifies the image as one of 133 dog breeds.  This model achieves 80.6220% accuracy, which is a relatively impressive level.</b><br><br>\n",
     "\n",
-    "__ANSWER: To prevent overfitting, I aim to reduce the number of parameters (layers and layer sizes) in my model [1]. A very small initial model feeds the output of Resnet50 into the first layer, which being a Global Average Pooling layer, greatly reduces dimensionality and helps prevent overfitting.  The following layer is a Dense layer which classifies the image as one of 133 dog breeds.  This model achieves 80.6220% accuracy, which is a relatively impressive level.__\n",
-    "\n",
-    "[1] https://blog.keras.io/building-powerful-image-classification-models-using-very-little-data.html"
+    "[1] https://blog.keras.io/building-powerful-image-classification-models-using-very-little-data.html</div>"
    ]
   },
   {
@@ -1458,11 +1482,17 @@
     "\n",
     "Test your algorithm at least six images on your computer.  Feel free to use any images you like.  Use at least two human and two dog images.  \n",
     "\n",
-    "__Question 6:__ Is the output better than you expected :) ?  Or worse :( ?  Provide at least three possible points of improvement for your algorithm.\n",
+    "__Question 6:__ Is the output better than you expected :) ?  Or worse :( ?  Provide at least three possible points of improvement for your algorithm."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>ANSWER: The output is about what I expected - dogs and humans (and neither) are correctly classified.  The breed label is likely incorrect in the first case, although not too far off (https://en.wikipedia.org/wiki/German_Shorthaired_Pointer).  The second dog is (likely) correctly identified as a Golden Retriever, the other dogs are correctly or nearly-correctly labeled, the humans have dog breeds assigned to them, and the non-human and non-dog images (including the cat) are correctly identified as such.  Even the human with sunglasses is correctly identified as a human.</b><br><br>\n",
     "\n",
-    "__ANSWER: The output is about what I expected - dogs and humans (and neither) are correctly classified.  The breed label is likely incorrect in the first case, although not too far off (https://en.wikipedia.org/wiki/German_Shorthaired_Pointer).  The second dog is (likely) correctly identified as a Golden Retriever, the other dogs are correctly or nearly-correctly labeled, the humans have dog breeds assigned to them, and the non-human and non-dog images (including the cat) are correctly identified as such.  Even the human with sunglasses is correctly identified as a human.__\n",
-    "\n",
-    "__First, the accuracy of the algorithm could likely be improved through further tweaking of the dog breed model architecture, starting with previously successful image identification models (particularly those from a similar domain).  Second, the model could likely use more training on a greater number and variety of images of different breeds, particularly for those breeds that are obscure or easily confused for one another.  Finally, training the networks on random translations and rotations of the images may significantly improve performance.__ "
+    "<b>First, the accuracy of the algorithm could likely be improved through further tweaking of the dog breed model architecture, starting with previously successful image identification models (particularly those from a similar domain).  Second, the model could likely use more training on a greater number and variety of images of different breeds, particularly for those breeds that are obscure or easily confused for one another.  Finally, training the networks on random translations and rotations of the images may significantly improve performance.</b></div>"
    ]
   },
   {
