--- a/finding-donors/finding_donors.ipynb
+++ b/finding-donors/finding_donors.ipynb
@@ -765,7 +765,7 @@
     "\n",
     "<b>I crossed-checked specific information above with other sources to ensure that it was generally accepted.</b><br><br>\n",
     "\n",
-    "<header><h4><font size=\"3\">Ensemble Methods: Random Forest</font></h4></header><br>\n",
+    "<heading><font size=\"3\"><b>Ensemble Methods: Random Forest</b></font><br><br></heading>\n",
     "\n",
     "<b>RF algorithms may for example be applied to the task of determining which medication would be most suitable to a patient, based on predictors such as gender, diagnosis, disease duration/progression, weight, and so forth.</b><br><br>\n",
     "\n",
@@ -773,13 +773,13 @@
     "\n",
     "<b>The weaknesses of this model are that it won't perform well with a bad set of features; it's not very transparent, and it's hard to interpret what's going on in the algorithm; further, too many trees can slow down the algorithm.</b><br><br>\n",
     "\n",
-    "<header><h4><font size=\"3\">Ensemble Methods: AdaBoost</font></h4></header><br>\n",
+    "<heading><font size=\"3\"><b>Ensemble Methods: AdaBoost</b></font><br><br></heading>\n",
     "\n",
     "<b>AdaBoost is an adaptive algorithm used for facial recognition systems.  It is particularly well-suited for boosting the performance of decision trees on binary classification tasks.  It typically does not overfit despite excellent accuracy (although it is to date unclear exactly how), and frequently outperforms other methods.  These features make it a good model to attempt for this problem, given that the algorithm can be used to boost the performance of classifiers that work well natively with categorical data, such as decision trees, and like RF will automatically select those features that are most important.  It additionally handles missing variables (although this does not seem to be a particular problem with this dataset), and does not require variable transformation, and has relatively few parameters that need tweaking.</b><br><br>\n",
     "\n",
     "<b>The weaknesses of this model are that it does not deal well with noisy data, and the efficiency of the algorithm is affected by outliers, since the algorithm attempts to fit each point.</b><br><br>\n",
     "\n",
-    "<header><h4><font size=\"3\">Logistic Regression</font></h4></header><br>\n",
+    "<heading><font size=\"3\"><b>Logistic Regression</b></font><br><br></heading>\n",
     "\n",
     "<b>In medicine, logistic regression may be used for tasks such as determining which factors within a population do, or do not lead, to increased likelihood of a specific health event, such as a heart attack.</b><br><br>\n",
     "\n",
