add session dump

--- a/capstone-project/capstone_project.ipynb
+++ b/capstone-project/capstone_project.ipynb
@@ -25298,7 +25298,7 @@
     "          'Precision': make_scorer(precision_score), \n",
     "          'Recall': make_scorer(recall_score)}\n",
     "\n",
-    "grid_obj = GridSearchCV(clf, param_grid = parameters, scoring=scorer, refit='Precision', verbose=1)\n",
+    "grid_obj = GridSearchCV(clf, param_grid = parameters, scoring=scorer, refit='Precision', verbose=5)\n",
     "\n",
     "grid_fit = grid_obj.fit(X_train_non_na, y_train)\n",
     "\n",
@@ -25411,7 +25411,7 @@
     "          'Precision': make_scorer(precision_score), \n",
     "          'Recall': make_scorer(recall_score)}\n",
     "\n",
-    "grid_obj = GridSearchCV(clf, param_grid = parameters, scoring=scorer, refit='Precision', verbose=1)\n",
+    "grid_obj = GridSearchCV(clf, param_grid = parameters, scoring=scorer, refit='Precision', verbose=5)\n",
     "\n",
     "grid_fit = grid_obj.fit(X_train_non_na, y_train)\n",
     "\n",
@@ -25656,7 +25656,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import dill\n",
+    "dill.dump_session('notebook_env.db')"
+   ]
   }
  ],
  "metadata": {
@@ -25675,7 +25678,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
