update code for backup

--- a/capstone-project/capstone_project.ipynb
+++ b/capstone-project/capstone_project.ipynb
@@ -27,7 +27,8 @@
     "pd.options.display.max_columns = None\n",
     "\n",
     "import warnings\n",
-    "warnings.simplefilter('ignore')"
+    "warnings.simplefilter('ignore')\n",
+    "import dill"
    ]
   },
   {
@@ -25310,6 +25311,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dill.dump_session('notebook_env1.db')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 102,
    "metadata": {
     "scrolled": true
@@ -25657,8 +25667,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import dill\n",
-    "dill.dump_session('notebook_env.db')"
+    "dill.dump_session('notebook_env2.db')"
    ]
   }
  ],
