update code for backup

--- a/capstone-project/capstone_project.ipynb
+++ b/capstone-project/capstone_project.ipynb
@@ -25469,6 +25469,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dill.dump_session('notebook_env2.db')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -25585,8 +25594,8 @@
     "from sklearn.base import clone\n",
     "\n",
     "# Reduce the feature space\n",
-    "X_train_reduced = X_train_non_na[X_train_non_na.columns.values[(np.argsort(importances)[::-1])[:5]]]\n",
-    "X_test_reduced = X_test_non_na[X_test_non_na.columns.values[(np.argsort(importances)[::-1])[:5]]]\n",
+    "X_train_reduced = X_train_non_na[X_train_non_na.columns.values[(np.argsort(importances_adaboost)[::-1])[:5]]]\n",
+    "X_test_reduced = X_test_non_na[X_test_non_na.columns.values[(np.argsort(importances_adaboost)[::-1])[:5]]]\n",
     "\n",
     "# Train on the \"best\" model found from grid search earlier\n",
     "adaboost_clf = (clone(best_adaboost_clf)).fit(X_train_reduced, y_train)\n",
@@ -25621,6 +25630,10 @@
     }
    ],
    "source": [
+    "# Reduce the feature space\n",
+    "X_train_reduced = X_train_non_na[X_train_non_na.columns.values[(np.argsort(importances_xgboost)[::-1])[:5]]]\n",
+    "X_test_reduced = X_test_non_na[X_test_non_na.columns.values[(np.argsort(importances_xgboost)[::-1])[:5]]]\n",
+    "\n",
     "# Train on the \"best\" model found from grid search earlier\n",
     "xgboost_clf = (clone(best_xgboost_clf)).fit(X_train_reduced, y_train)\n",
     "\n",
@@ -25667,7 +25680,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dill.dump_session('notebook_env2.db')"
+    "dill.dump_session('notebook_env3.db')"
    ]
   }
  ],
