updated notebook with analyses.

--- a/capstone-project/capstone_project.ipynb
+++ b/capstone-project/capstone_project.ipynb
@@ -25559,9 +25559,7 @@
    "source": [
     "### Extracting Feature Importance\n",
     "\n",
-    "Below, I plot the most important features for the optimal model chosen above.  As can be seen, the magnitude of the monthly loan payment, the age of credit history, the amoung of revolving credit balance, the loan borrower rate, and the loan origination date are the best predictors of whether a loan will default, or not.  The first four predictors tend to correlate with a borrower's credit worthiness, and it is unsurprising that they primarily determine whether a loan will be paid back, or not.  In contrast, it is unclear why loan origination date should be a good predictor of a loan defaulting -- however, I have previously found that loan completion and lender profit tend to 'cycle' over time, for reasons that would need to be expored further:\n",
-    "\n",
-    "https://eskrav.github.io/udacity-data-analyst/explore-and-summarize/explore-and-summarize.html#lender_profit_by_loan_origination_quarter"
+    "Below, I plot the most important features for the optimal model chosen above.  As can be seen, the magnitude of the monthly loan payment, the age of credit history, the available bankcard credit, the stated monthly income, and employment status duration are the best predictors of whether a loan will default, or not.  Three of these predictors tend to correlate with a borrower's credit worthiness, and it is unsurprising that they primarily determine whether a loan will be paid back, or not.  Monthly income and empolyment status duration are, similarly, determinants of ability to pay back the loan."
    ]
   },
   {
@@ -28474,14 +28472,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "$-2,478,299.58 would be lost in total, for a return rate of -0.07%.\n"
+      "$-2,478,299.58 would be lost in total, for a return rate of -0.073%.\n"
      ]
     }
    ],
@@ -28490,14 +28488,14 @@
     "total_return = total_losses / (gained_money[\"LoanOriginalAmount\"].sum() + lost_money.sum())\n",
     "\n",
     "print(\"${0:,} would be lost in total, for a return rate of {1:,}%.\".format(round(total_losses,2), \n",
-    "                                                                       round(total_return,2)))"
+    "                                                                       round(total_return,3)))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If lenders were to select loans on the basis of this model, they would lose over 2 million in total, for a return of -7.3%.  This is highly suboptimal, but significantly better than the return rate of the referenced Prosper analysis (-23%)."
+    "If lenders were to select loans on the basis of this model, they would lose over 2 million in total, for a return of -7.3%.  This is highly suboptimal, but significantly better than the return rate of the referenced Prosper analysis (-23%).  It appears that the problem in the case of the older Prosper analysis is that: 1) it was not sufficiently accurate in identifying defaulted loans; 2) it identified repaid loans as defaulted frequently enough that the profit from repaid loans does not offset the loss from defaulted loans."
    ]
   },
   {
@@ -28522,27 +28520,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "$-68,045,292.14 is how much Prosper customers lost in total, for a return rate of -0.2%.\n"
+      "$-68,045,292.14 is how much Prosper customers lost in total, for a return rate of -0.197%.\n"
      ]
     }
    ],
    "source": [
     "print(\"${0:,} is how much Prosper customers lost in total, for a return rate of {1:,}%.\".format(round(prosper_total_losses,2), \n",
-    "                                                                       round(prosper_total_return,2)))"
+    "                                                                       round(prosper_total_return,3)))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However, this should also be compared to how much Prosper customers lost in total - over 68 million, for a return of -20%."
+    "However, this should also be compared to how much Prosper customers lost in total over the period in question - over 68 million, for a return of -19.7%.  Clearly, approved Prosper loans are relatively likely to fail, and customers are not sufficiently risk-averse."
    ]
   }
  ],
