updated notebook with analyses.

--- a/capstone-project/capstone_project.ipynb
+++ b/capstone-project/capstone_project.ipynb
@@ -28472,14 +28472,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "$-2,478,299.58 would be lost in total, for a return rate of -0.073%.\n"
+      "$-2,478,299.58 would be lost in total, for a return rate of -0.073.\n"
      ]
     }
    ],
@@ -28487,7 +28487,7 @@
     "total_losses = gained_money[\"Profit\"].sum() - lost_money.sum()\n",
     "total_return = total_losses / (gained_money[\"LoanOriginalAmount\"].sum() + lost_money.sum())\n",
     "\n",
-    "print(\"${0:,} would be lost in total, for a return rate of {1:,}%.\".format(round(total_losses,2), \n",
+    "print(\"${0:,} would be lost in total, for a return rate of {1:,}.\".format(round(total_losses,2), \n",
     "                                                                       round(total_return,3)))"
    ]
   },
@@ -28520,19 +28520,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "$-68,045,292.14 is how much Prosper customers lost in total, for a return rate of -0.197%.\n"
+      "$-68,045,292.14 is how much Prosper customers lost in total, for a return rate of -0.197.\n"
      ]
     }
    ],
    "source": [
-    "print(\"${0:,} is how much Prosper customers lost in total, for a return rate of {1:,}%.\".format(round(prosper_total_losses,2), \n",
+    "print(\"${0:,} is how much Prosper customers lost in total, for a return rate of {1:,}.\".format(round(prosper_total_losses,2), \n",
     "                                                                       round(prosper_total_return,3)))"
    ]
   },
